<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgoundcolor"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/small_header_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/semensteransvarlige_header" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/semesteransvarlige"/>
        
         <TextView
            style="@style/small_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/varmestueudvalget_header" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/varmestueudvalget" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/uddannelsespolitisk_header"
            style="@style/small_header_style"/>
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/uddannelsespolitisk"/>

        <TextView
            style="@style/small_header_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/studenteraadsudvalget_header" />

       <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/studenterraadsudvalget" />

        <TextView
            style="@style/small_header_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/fagligdagudvalget_header" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fagligdagudvalget"
            android:paddingBottom="15dp" />

        

        

    </LinearLayout>

</ScrollView>
