<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".OtherTabActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".OtherTabActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            style="@style/header_style"
            android:text="@string/medicinerraadet_header" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:text="@string/medicinerraadet" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="20dp"
            android:text="@string/who_is_in_mr_header"
            style="@style/header_style"/>
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView3"
            android:text="@string/who_is_in_mr" />

        <!-- <TextView -->
        <!-- android:id="@+id/textView4" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignLeft="@+id/textView2" -->
        <!-- android:layout_below="@+id/textView2" -->
        <!-- android:text="@string/link" -->
        <!-- android:autoLink="all" -->
        <!-- android:linksClickable="true" /> -->
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="16dp"
            android:text="@string/aabningstider_header"
            style="@style/header_style"/>
        
        <TextView 
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:text="@string/aabningstider_into"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:text="@string/aabningstider"
        	android:paddingLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:text="@string/adresse" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:text="@string/kontakt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="16dp"
            android:text="@string/velkommen" />

        <TextView
            android:id="@+id/textView8"
            style="@style/header_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="18dp"
            android:text="@string/adresse_header" />

    </RelativeLayout>

</ScrollView>