<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgoundcolor"
    android:orientation="vertical"
    tools:context=".ContactTabActivity" >

    <!-- Kontakt -->

    <TextView
        android:id="@+id/textView1"
        style="@style/header_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kontakt_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/contextTekstFelt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <Spinner
                            android:id="@+id/subject_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/semester_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/send"
                        android:textSize="20sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/text_body"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:hint="@string/skriv_besked"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>